--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,27 +8,29 @@ minSdk = "21"
 targetSdk = "35"
 ndkVersion = "25.1.8937393"
 
+# Compose BOM
+composeBom = "2025.06.00"
+
 # Main dependencies
 koin = "3.5.0"
 playServices = "21.3.0"
 accompanist = "0.34.0"
-room = "2.7.0-rc03"
-firebase = "33.0.0"
-compose = "1.6.7"
-workManager = "2.9.1"
-androidx-core = "1.13.1"
-androidx-appcompat = "1.7.0"
-androidx-activity = "1.9.3"
-androidx-lifecycle = "2.8.6"
-androidx-navigation = "2.8.3"
+room = "2.7.1"
+firebase = "33.15.0"
+workManager = "2.10.1"
+androidx-core = "1.16.0"
+androidx-appcompat = "1.7.1"
+androidx-activity = "1.10.1"
+androidx-lifecycle = "2.9.1"
+androidx-navigation = "2.9.0"
 material3 = "1.3.0"
 material = "1.12.0"
-constraintlayout = "2.1.4"
+constraintlayout = "2.2.1"
 
 # Networking & Serialization
-retrofit = "2.11.0"
+retrofit = "3.0.0"
 okhttp = "4.11.0"
-moshi = "1.15.1"
+moshi = "1.15.2"
 coil = "2.4.0"
 
 # Reactive
@@ -58,22 +60,25 @@ persistentCookieJar = "v1.0.1"
 junit = "4.13.2"
 mockito = "5.2.0"
 mockitoKotlin = "1.6.0"
-androidxTest = "1.1.5"
-androidxTestRunner = "1.5.2"
-androidxTestRules = "1.5.0"
-espressoCore = "3.5.1"
+androidxTest = "1.2.1"
+androidxTestRunner = "1.6.2"
+androidxTestRules = "1.6.1"
+espressoCore = "3.6.1"
 archCoreTesting = "2.2.0"
-coroutinesTest = "1.7.3"
+coroutinesTest = "1.10.1"
 turbine = "1.0.0"
 
 # Build tools & Plugins
 ksp = "2.1.21-2.0.1"
 googleServices = "4.4.2"
-crashlytics = "3.0.2"
+crashlytics = "3.0.4"
 molecule = "1.2.0"
 cmake = "3.10.2"
 
 [libraries]
+# Compose BOM
+compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "composeBom" }
+
 # Android Core
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "androidx-core" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "androidx-appcompat" }
@@ -83,14 +88,14 @@ androidx-lifecycle-viewmodel-ktx = { group = "androidx.lifecycle", name = "lifec
 androidx-navigation-fragment-ktx = { group = "androidx.navigation", name = "navigation-fragment-ktx", version.ref = "androidx-navigation" }
 androidx-navigation-ui-ktx = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "androidx-navigation" }
 
-# Compose
-compose-material = { group = "androidx.compose.material", name = "material", version.ref = "compose" }
-compose-material-icons-extended = { group = "androidx.compose.material", name = "material-icons-extended", version.ref = "compose" }
-compose-ui = { group = "androidx.compose.ui", name = "ui", version.ref = "compose" }
-compose-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling", version.ref = "compose" }
-compose-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview", version.ref = "compose" }
-compose-ui-util = { group = "androidx.compose.ui", name = "ui-util", version.ref = "compose" }
-compose-material3 = { group = "androidx.compose.material3", name = "material3", version.ref = "material3" }
+# Compose (versions managed by BOM)
+compose-material = { group = "androidx.compose.material", name = "material" }
+compose-material-icons-extended = { group = "androidx.compose.material", name = "material-icons-extended" }
+compose-ui = { group = "androidx.compose.ui", name = "ui" }
+compose-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
+compose-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
+compose-ui-util = { group = "androidx.compose.ui", name = "ui-util" }
+compose-material3 = { group = "androidx.compose.material3", name = "material3" }
 
 # Accompanist
 accompanist-placeholder-material = { group = "com.google.accompanist", name = "accompanist-placeholder-material", version.ref = "accompanist" }
