--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -21,6 +21,7 @@ room = "2.7.2"
 firebase = "33.16.0"
 workManager = "2.10.2"
 androidx-core = "1.16.0"
+androidxCoreSplashscreen = "1.0.1"
 androidx-activity = "1.10.1"
 androidx-lifecycle = "2.9.1"
 androidx-navigation = "2.9.0"
@@ -82,6 +83,7 @@ androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = 
 androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "androidx-activity" }
 androidx-lifecycle-extensions = { group = "androidx.lifecycle", name = "lifecycle-extensions", version = "2.2.0" }
 androidx-lifecycle-viewmodel-ktx = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-ktx", version.ref = "androidx-lifecycle" }
+androidx-core-splashscreen = { group = "androidx.core", name = "core-splashscreen", version.ref = "androidxCoreSplashscreen" }
 
 # Compose (versions managed by BOM)
 compose-material = { group = "androidx.compose.material", name = "material" }
